# osqoop

./: CMakeLists.txt  Doxyfile  authors  changelog  doxygen-osqoop.css  fixhelperperm  readme  readme.md
cmake/modules/: FindFFTW.cmake
datasource/: CMakeLists.txt
datasource/AvrDSO/: avrdso.json
datasource/Dds/: CMakeLists.txt  Dds.cpp  Dds.h  dds.json
datasource/SoundCard/: CMakeLists.txt  SoundCard.cpp  SoundCard.h  soundcard.json
datasource/TseAdExt/: CMakeLists.txt  CypressEzUSBDevice.cpp  CypressEzUSBDevice.h  FirmwareBix.qrc  TseAdExt.cpp  TseAdExt.h  USBDevice.h  fw.bix  tseadext.json
datasource/TseAdExt/fwsrc/: Gpif_multiChannel.c  Gpif_singleChannel.c  debug.h  periph.c  serial.c  serial.h  types.h
datasource/TseAdExt/fx2/: ezusbsys.h
datasource/VariousSinus/: CMakeLists.txt  VariousSinus.cpp  VariousSinus.h  varioussinus.json
debian/: changelog  control  copyright  rules
doc/manual/: osqoop.css  user-manual-en.html  user-manual-fr.html
docsource/: DataSourceCookbook.dox  ProcessinPluginsCookbook.dox  tseadext-timing.odg
helper/: CMakeLists.txt  setupfx2.c  tseadextfw.hex
processing/: CMakeLists.txt
processing/Abs/: Abs.cpp  Abs.h  CMakeLists.txt
processing/BandPass2ndOrderFilter/: CMakeLists.txt  ProcessingBandPass2ndOrderFilter.cpp  ProcessingBandPass2ndOrderFilter.h
processing/Const/: CMakeLists.txt  Const.cpp  Const.h
processing/CropBelowLevel/: CMakeLists.txt  CropBelowLevel.cpp  CropBelowLevel.h
processing/Delay/: CMakeLists.txt  Delay.cpp  Delay.h
processing/Div/: CMakeLists.txt  Div.cpp  Div.h
processing/EMGEnvelope/: CMakeLists.txt  EMGEnvelope.cpp  EMGEnvelope.h
processing/EMGMouseBackpropNNClassifier/: CMakeLists.txt  EMGMouseBackpropNNClassifier.cpp  EMGMouseBackpropNNClassifier.h
processing/Gain/: CMakeLists.txt  Gain.cpp  Gain.h
processing/Greater/: CMakeLists.txt  Greater.cpp  Greater.h
processing/IIR2ndOrderFilter/: CMakeLists.txt  IIR2ndOrderFilter.cpp  IIR2ndOrderFilter.h
processing/Mult/: CMakeLists.txt  Mult.cpp  Mult.h
processing/Negate/: CMakeLists.txt  Negate.cpp  Negate.h
processing/Pow/: CMakeLists.txt  Pow.cpp  Pow.h
processing/ProcessingBandPass2ndOrderFilter/: ProcessingBandPass2ndOrderFilter.cpp  ProcessingBandPass2ndOrderFilter.h
processing/SpectroGraph/: CMakeLists.txt  SpectroGraph.cpp  SpectroGraph.h
processing/Sum/: CMakeLists.txt  Sum.cpp  Sum.h
processing/VirtualMouse/: CMakeLists.txt  VirtualMouse.cpp  VirtualMouse.h
processing/XYMode/: CMakeLists.txt  XYMode.cpp  XYMode.h
processing/lib/: BandPass2ndOrderFilter.cpp  BandPass2ndOrderFilter.h  CMakeLists.txt  FeedForwardNeuralNetwork.cpp  FeedForwardNeuralNetwork.h  IIRFilter.cpp  IIRFilter.h  IntegerRealValuedFFT.h  Matrix.h  Random.h
src/: CMakeLists.txt  DataConverter.cpp  DataConverter.h  DataSource.h  OscilloscopeWindow.cpp  OscilloscopeWindow.h  Osqoop.cpp  Osqoop.qrc  ProcessingPlugin.h  ProcessingPluginDialog.cpp  ProcessingPluginDialog.h  Settings.h  SignalDisplayData.cpp  SignalDisplayData.h  SignalViewWidget.cpp  SignalViewWidget.h  Utilities.cpp  Utilities.h  Version.h  osqoop_fr.qm  osqoop_fr.ts
src/images/: source.txt
