add_subdirectory(lib)
add_definitions(-DQT_PLUGIN)
include_directories (${CMAKE_SOURCE_DIR}/src)
include_directories (${CMAKE_SOURCE_DIR}/processing/lib)
add_subdirectory(Abs)
add_subdirectory(BandPass2ndOrderFilter)
add_subdirectory(Const)
add_subdirectory(CropBelowLevel)
add_subdirectory(Delay)
add_subdirectory(Div)
add_subdirectory(EMGEnvelope)
add_subdirectory(EMGMouseBackpropNNClassifier)
add_subdirectory(Gain)
add_subdirectory(Greater)
add_subdirectory(IIR2ndOrderFilter)
add_subdirectory(Mult)
add_subdirectory(Negate)
add_subdirectory(Pow)
add_subdirectory(Sum)
add_subdirectory(VirtualMouse)
add_subdirectory(XYMode)