if (LibUSB_FOUND OR WIN32)
	set(TseAdExt_SRCS CypressEzUSBDevice.cpp TseAdExt.cpp)
	qt4_automoc(${TseAdExt_SRCS})
	include_directories (${CMAKE_BINARY_DIR}/datasource/TseAdExt)
	if (WIN32)
		qt4_add_resources(res_SRCS FirmwareBix.qrc)
		set(TseAdExt_SRCS ${TseAdExt_SRCS} ${res_SRCS})
	else (WIN32)
		set(EXTRA_LIBS ${LibUSB_LIBRARIES})
	endif (WIN32)
	add_library(TseAdExt MODULE ${TseAdExt_SRCS})
	target_link_libraries(TseAdExt ${EXTRA_LIBS})
	install(TARGETS TseAdExt DESTINATION datasource)
endif (LibUSB_FOUND OR WIN32)