if (LibUSB_FOUND OR WIN32)
	set(TseAdExt_SRCS CypressEzUSBDevice.cpp TseAdExt.cpp)
	include_directories (${CMAKE_BINARY_DIR}/datasource/TseAdExt)
	if (WIN32)
                qt5_add_resources(res_SRCS FirmwareBix.qrc)
		set(TseAdExt_SRCS ${TseAdExt_SRCS} ${res_SRCS})
	else (WIN32)
		set(EXTRA_LIBS ${LibUSB_LIBRARIES})
	endif (WIN32)
	add_library(TseAdExt MODULE ${TseAdExt_SRCS})
        target_link_libraries(TseAdExt ${EXTRA_LIBS} Qt5::Core Qt5::Widgets)
	install(TARGETS TseAdExt DESTINATION share/osqoop/datasource)
endif (LibUSB_FOUND OR WIN32)
