set(BandPass2ndOrderFilter_SRCS ProcessingBandPass2ndOrderFilter.cpp)
include_directories (${CMAKE_BINARY_DIR}/processing/BandPass2ndOrderFilter)
add_library(BandPass2ndOrderFilter MODULE ${BandPass2ndOrderFilter_SRCS})
target_link_libraries(BandPass2ndOrderFilter processing Qt5::Core Qt5::Widgets)
install(TARGETS BandPass2ndOrderFilter DESTINATION share/osqoop/processing)
