set(IIR2ndOrderFilter_SRCS IIR2ndOrderFilter.cpp)
include_directories (${CMAKE_BINARY_DIR}/processing/IIR2ndOrderFilter)
add_library(IIR2ndOrderFilter MODULE ${IIR2ndOrderFilter_SRCS})
target_link_libraries(IIR2ndOrderFilter processing Qt5::Core Qt5::Widgets)
install(TARGETS IIR2ndOrderFilter DESTINATION share/osqoop/processing)
