find_path(XTEST_INCLUDE_DIR X11/extensions/XTest.h)
if (XTEST_INCLUDE_DIR)
	set(VirtualMouse_SRCS VirtualMouse.cpp)
	qt4_automoc(${VirtualMouse_SRCS})
	include_directories (${CMAKE_BINARY_DIR}/processing/VirtualMouse)
	add_library(VirtualMouse MODULE ${VirtualMouse_SRCS})
	install(TARGETS VirtualMouse DESTINATION share/osqoop/processing)
endif()
